2008-06-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom48.h: Add fuse, and signature information.
	* include/avr/io1200.h: Add fuse, lockbit, and signature information.
	* include/avr/iom103.h: Ditto.
	* include/avr/io8535.h: Ditto.
	* include/avr/io8515.h: Ditto.
	* include/avr/io4434.h: Ditto.
	* include/avr/io4433.h: Ditto.
	* include/avr/io4414.h: Ditto.
	* include/avr/io2343.h: Ditto.
	* include/avr/io2323.h: Ditto.
	* include/avr/io2313.h: Ditto.
	* include/avr/io86r401.h: Ditto.

2008-06-11  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32u4.h: Fix bit names for registers OCR0A and CLKPR.

2008-06-11  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32u4.h: Fix register misnaming from DDIR2 to DIDR2.

2008-05-12  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox64a1.h (SPM_PAGESIZE): Change value to 512.
	* include/avr/iox128a1.h (SPM_PAGESIZE): Ditto.

2008-05-07  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23166.
	* include/avr/boot.h: Define __SPM_ENABLE as SPMEN or SELFPRGEN, depending
	on whether device has that bit definition. Use __SPM_ENABLE in all macros.
	* NEWS: Add to fixed bug list.

2008-05-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iousbxx6_7.h: Conditionally define RAMPZ only if device is
	AT90USB1286 or AT90USB1287 (> 64K Flash).

2008-05-02  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/runtest.sh: Add ASM files to operate.
	* tests/simulate/avr/sfr-1.c: New file.
	* tests/simulate/avr/sfr-2.c: New file.
	* tests/simulate/avr/sfr-3.c: New file.
	* tests/simulate/avr/sfrasm-1.S: New file.
	* tests/simulate/avr/sfrasm-2.S: New file.
	* tests/simulate/avr/sfrasm-3.S: New file.

2008-05-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox128a1.h: Conditionally compile flattened register names 
	for use in assembler only.
	* include/avr/iox64a1.h: Ditto.
