@@ -1,5 +1,11 @@
 2008-06-18  Eric B. Weddington  <eric.weddington@atmel.com>
 
+	Fix for bug #23261.
+	* include/avr/power.h: Add power_all_enable() and power_all_disable for
+	AT90USB82 and AT90USB162.
+
+2008-06-18  Eric B. Weddington  <eric.weddington@atmel.com>
+
 	* include/avr/iom48.h: Add fuse, and signature information.
 	* include/avr/io1200.h: Add fuse, lockbit, and signature information.
 	* include/avr/iom103.h: Ditto.
